day-4/kubernetes-manifest/deployment-svc-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b-deployment
    # run: service-b-deployment
  name: service-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b-deployment
  template:
    metadata:
      labels:
        app: service-b-deployment
    spec:
      containers:
      - image: jozefcvik/observability-zero-to-hero-demoservice-b:latest
        name: service-b
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
