day-4/kubernetes-manifest/ingress-svc-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a-service
            port:
              number: 80
